Fix likes and opinion to not use user_profile_id
